Fixed misaligned channel unread

--- a/src/theme/_vars.scss
+++ b/src/theme/_vars.scss
@@ -8,7 +8,7 @@
 }
 
 :root {
-	--softx-version: '1.1.16';
+	--softx-version: '1.1.17';
 
 	--hue: 0deg;
 	--saturation: 0%;
