--- a/src/theme/sidebar/_channel.scss
+++ b/src/theme/sidebar/_channel.scss
@@ -12,6 +12,7 @@
 				height: 15px;
 				margin: 0;
 				transform: translateY(-50%);
+				top: 50%;
 				border-radius: 0;
 			}
 			.icon-2W8DHg,
